CompilerCLI/ANTLR4Parser/antlrGrammar/tinyParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\amaur\Documents\Compiladores I\PruebasProyecto\Prueba3\antlrGrammar\tiny.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class tinyParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Parentesis=1, Keys=2, Type=3, RelOperator=4, Program=5, If=6, Else=7, 
		Then=8, Fi=9, Do=10, Until=11, While=12, Read=13, Write=14, Float=15, 
		INT=16, Bool=17, NOT=18, Or=19, And=20, True=21, False=22, Equals=23, 
		NEquals=24, GTEquals=25, LTEquals=26, Pow=27, Excl=28, GT=29, LT=30, Add=31, 
		Subtract=32, Multiply=33, Divide=34, Modulus=35, Assign=36, OBrace=37, 
		CBrace=38, OParen=39, CParen=40, SColon=41, Comma=42, Number=43, Identifier=44, 
		String=45, Comment=46, Space=47, ERROR=48;
	public const int
		RULE_parse = 0, RULE_block = 1, RULE_lista_declaracion = 2, RULE_declaracion = 3, 
		RULE_lista_id = 4, RULE_lista_sentencias = 5, RULE_sentencia = 6, RULE_seleccion = 7, 
		RULE_iteracion = 8, RULE_repeticion = 9, RULE_sent_read = 10, RULE_sent_write = 11, 
		RULE_bloque = 12, RULE_asignacion = 13, RULE_b_expresion = 14, RULE_b_term = 15, 
		RULE_not_factor = 16, RULE_b_factor = 17, RULE_relacion = 18, RULE_expresion = 19, 
		RULE_termino = 20, RULE_signoFactor = 21, RULE_factor = 22, RULE_sumaOp = 23, 
		RULE_multOp = 24;
	public static readonly string[] ruleNames = {
		"parse", "block", "lista_declaracion", "declaracion", "lista_id", "lista_sentencias", 
		"sentencia", "seleccion", "iteracion", "repeticion", "sent_read", "sent_write", 
		"bloque", "asignacion", "b_expresion", "b_term", "not_factor", "b_factor", 
		"relacion", "expresion", "termino", "signoFactor", "factor", "sumaOp", 
		"multOp"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'program'", "'if'", "'else'", "'then'", 
		"'fi'", "'do'", "'until'", "'while'", "'read'", "'write'", "'float'", 
		"'int'", "'bool'", "'not'", "'or'", "'and'", "'true'", "'false'", "'=='", 
		"'!='", "'>='", "'<='", "'^'", "'!'", "'>'", "'<'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'='", "'{'", "'}'", "'('", "')'", "';'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Parentesis", "Keys", "Type", "RelOperator", "Program", "If", "Else", 
		"Then", "Fi", "Do", "Until", "While", "Read", "Write", "Float", "INT", 
		"Bool", "NOT", "Or", "And", "True", "False", "Equals", "NEquals", "GTEquals", 
		"LTEquals", "Pow", "Excl", "GT", "LT", "Add", "Subtract", "Multiply", 
		"Divide", "Modulus", "Assign", "OBrace", "CBrace", "OParen", "CParen", 
		"SColon", "Comma", "Number", "Identifier", "String", "Comment", "Space", 
		"ERROR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "tiny.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static tinyParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public tinyParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public tinyParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ParseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(tinyParser.Eof, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parse; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterParse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitParse(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParseContext parse() {
		ParseContext _localctx = new ParseContext(Context, State);
		EnterRule(_localctx, 0, RULE_parse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50;
			block();
			State = 51;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Program() { return GetToken(tinyParser.Program, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Keys() { return GetTokens(tinyParser.Keys); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Keys(int i) {
			return GetToken(tinyParser.Keys, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_declaracionContext[] lista_declaracion() {
			return GetRuleContexts<Lista_declaracionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_declaracionContext lista_declaracion(int i) {
			return GetRuleContext<Lista_declaracionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_sentenciasContext[] lista_sentencias() {
			return GetRuleContexts<Lista_sentenciasContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Lista_sentenciasContext lista_sentencias(int i) {
			return GetRuleContext<Lista_sentenciasContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			Match(Program);
			State = 54;
			Match(Keys);
			State = 60;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Type) {
				{
				{
				State = 55;
				lista_declaracion();
				State = 56;
				lista_sentencias();
				}
				}
				State = 62;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 63;
			Match(Keys);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lista_declaracionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracionContext[] declaracion() {
			return GetRuleContexts<DeclaracionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclaracionContext declaracion(int i) {
			return GetRuleContext<DeclaracionContext>(i);
		}
		public Lista_declaracionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lista_declaracion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterLista_declaracion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitLista_declaracion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLista_declaracion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Lista_declaracionContext lista_declaracion() {
		Lista_declaracionContext _localctx = new Lista_declaracionContext(Context, State);
		EnterRule(_localctx, 4, RULE_lista_declaracion);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 65;
				declaracion();
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==Type );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclaracionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Type() { return GetToken(tinyParser.Type, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Lista_idContext lista_id() {
			return GetRuleContext<Lista_idContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SColon() { return GetToken(tinyParser.SColon, 0); }
		public DeclaracionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaracion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterDeclaracion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitDeclaracion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaracion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclaracionContext declaracion() {
		DeclaracionContext _localctx = new DeclaracionContext(Context, State);
		EnterRule(_localctx, 6, RULE_declaracion);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			Match(Type);
			State = 71;
			lista_id();
			State = 72;
			Match(SColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lista_idContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Identifier() { return GetTokens(tinyParser.Identifier); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier(int i) {
			return GetToken(tinyParser.Identifier, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(tinyParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(tinyParser.Comma, i);
		}
		public Lista_idContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lista_id; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterLista_id(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitLista_id(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLista_id(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Lista_idContext lista_id() {
		Lista_idContext _localctx = new Lista_idContext(Context, State);
		EnterRule(_localctx, 8, RULE_lista_id);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			Match(Identifier);
			State = 79;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 75;
				Match(Comma);
				State = 76;
				Match(Identifier);
				}
				}
				State = 81;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Lista_sentenciasContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SentenciaContext[] sentencia() {
			return GetRuleContexts<SentenciaContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SentenciaContext sentencia(int i) {
			return GetRuleContext<SentenciaContext>(i);
		}
		public Lista_sentenciasContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lista_sentencias; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterLista_sentencias(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitLista_sentencias(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLista_sentencias(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Lista_sentenciasContext lista_sentencias() {
		Lista_sentenciasContext _localctx = new Lista_sentenciasContext(Context, State);
		EnterRule(_localctx, 10, RULE_lista_sentencias);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 82;
					sentencia();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 85;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SentenciaContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SeleccionContext seleccion() {
			return GetRuleContext<SeleccionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IteracionContext iteracion() {
			return GetRuleContext<IteracionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RepeticionContext repeticion() {
			return GetRuleContext<RepeticionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Sent_readContext sent_read() {
			return GetRuleContext<Sent_readContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Sent_writeContext sent_write() {
			return GetRuleContext<Sent_writeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BloqueContext bloque() {
			return GetRuleContext<BloqueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AsignacionContext asignacion() {
			return GetRuleContext<AsignacionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comment() { return GetToken(tinyParser.Comment, 0); }
		public SentenciaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sentencia; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterSentencia(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitSentencia(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSentencia(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SentenciaContext sentencia() {
		SentenciaContext _localctx = new SentenciaContext(Context, State);
		EnterRule(_localctx, 12, RULE_sentencia);
		try {
			State = 95;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case If:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87;
				seleccion();
				}
				break;
			case While:
				EnterOuterAlt(_localctx, 2);
				{
				State = 88;
				iteracion();
				}
				break;
			case Do:
				EnterOuterAlt(_localctx, 3);
				{
				State = 89;
				repeticion();
				}
				break;
			case Read:
				EnterOuterAlt(_localctx, 4);
				{
				State = 90;
				sent_read();
				}
				break;
			case Write:
				EnterOuterAlt(_localctx, 5);
				{
				State = 91;
				sent_write();
				}
				break;
			case Keys:
				EnterOuterAlt(_localctx, 6);
				{
				State = 92;
				bloque();
				}
				break;
			case Identifier:
				EnterOuterAlt(_localctx, 7);
				{
				State = 93;
				asignacion();
				}
				break;
			case Comment:
				EnterOuterAlt(_localctx, 8);
				{
				State = 94;
				Match(Comment);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SeleccionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode If() { return GetToken(tinyParser.If, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Parentesis() { return GetTokens(tinyParser.Parentesis); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Parentesis(int i) {
			return GetToken(tinyParser.Parentesis, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public B_expresionContext b_expresion() {
			return GetRuleContext<B_expresionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Then() { return GetToken(tinyParser.Then, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BloqueContext[] bloque() {
			return GetRuleContexts<BloqueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BloqueContext bloque(int i) {
			return GetRuleContext<BloqueContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Fi() { return GetToken(tinyParser.Fi, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Else() { return GetToken(tinyParser.Else, 0); }
		public SeleccionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_seleccion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterSeleccion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitSeleccion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSeleccion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SeleccionContext seleccion() {
		SeleccionContext _localctx = new SeleccionContext(Context, State);
		EnterRule(_localctx, 14, RULE_seleccion);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			Match(If);
			State = 98;
			Match(Parentesis);
			State = 99;
			b_expresion();
			State = 100;
			Match(Parentesis);
			State = 101;
			Match(Then);
			State = 102;
			bloque();
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Else) {
				{
				State = 103;
				Match(Else);
				State = 104;
				bloque();
				}
			}

			State = 107;
			Match(Fi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IteracionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode While() { return GetToken(tinyParser.While, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Parentesis() { return GetTokens(tinyParser.Parentesis); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Parentesis(int i) {
			return GetToken(tinyParser.Parentesis, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public B_expresionContext b_expresion() {
			return GetRuleContext<B_expresionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BloqueContext bloque() {
			return GetRuleContext<BloqueContext>(0);
		}
		public IteracionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_iteracion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterIteracion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitIteracion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIteracion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IteracionContext iteracion() {
		IteracionContext _localctx = new IteracionContext(Context, State);
		EnterRule(_localctx, 16, RULE_iteracion);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 109;
			Match(While);
			State = 110;
			Match(Parentesis);
			State = 111;
			b_expresion();
			State = 112;
			Match(Parentesis);
			State = 113;
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RepeticionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Do() { return GetToken(tinyParser.Do, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BloqueContext bloque() {
			return GetRuleContext<BloqueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Until() { return GetToken(tinyParser.Until, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Parentesis() { return GetTokens(tinyParser.Parentesis); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Parentesis(int i) {
			return GetToken(tinyParser.Parentesis, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public B_expresionContext b_expresion() {
			return GetRuleContext<B_expresionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SColon() { return GetToken(tinyParser.SColon, 0); }
		public RepeticionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_repeticion; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.EnterRepeticion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ItinyListener typedListener = listener as ItinyListener;
			if (typedListener != null) typedListener.ExitRepeticion(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ItinyVisitor<TResult> typedVisitor = visitor as ItinyVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRepeticion(this);
			else return visitor.VisitChildren(this);
		}
	}
